[package]
name = "promising-future"
version = "0.1.3"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
license = "MIT"
description = "Implementation of Promise/Future pairs."
repository = "https://github.com/jsgf/promising-future"
documentation = "https://jsgf.github.io/promising-future/promising_future/index.html"
readme = "README.md"
keywords = ["async", "asynchronous", "promise", "future"]

[features]
default = [ "threadpool" ]

[dependencies.threadpool]
version = "0.1"
optional = true
