[package]
name = "promising-future"
version = "0.2.1"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
license = "MIT/Apache-2.0"
description = "Implementation of Promise/Future pairs."
repository = "https://github.com/jsgf/promising-future"
documentation = "https://jsgf.github.io/promising-future/index.html"
readme = "README.md"
keywords = ["async", "asynchronous", "promise", "future"]

[features]
default = [ "threadpool" ]
unstable = [ "criterion", "criterion-macros" ]

[dependencies]
threadpool = { version = "0.2", optional = true }
criterion = { git = "https://github.com/japaric/criterion.rs.git", optional=true }
criterion-macros = { git = "https://github.com/japaric/criterion.rs.git", path = "macros", optional=true }
